[Feat] 경매장 조회: history가 없고 매물이 없는 아이템은 response에서 제외 / 경매장 등록된 매물 20개 보여주기